Mon Oct 27 18:45:19 CET 2003 Jordi Mallach <jordi@debian.org>

  * po/ca.po: Update Catalan translation and recode to UTF-8.

Mon Oct 27 11:06:25 CST 2003 Adam Heath <doogie@debian.org>

  * debian/dpkg.postinst: Don't assume /usr/info/dir exists if /usr/info
    does.

Mon Oct 27 10:57:54 CST 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.pl: Add .#* to the default ignore filter.

Mon Oct 27 09:49:29 CST 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-scanpackages.pl: Add -u -a<arch> commands.

Mon Oct 27 09:42:57 CST 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.pl: Set $reduce_arch when calling parsedep.

Sun Oct 26 19:29:16 CST 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.pl: s/dpkg-checkbuild/dpkg-checkbuilddeps/
    in usage.
  * version-nr: Bump to 1.10.17.
  * debian/changelog: Make the date UNRELEASED.

Sun Oct 26 14:55:53 CET 2003 Wichert Akkerman <wichert@wiggy.net>

  * dselect/pkgdepcon.cc: change return value for pkgdepcon() to indicate
    a conflict resolution is needed when dealing with autoselected
    recommends

Sat Oct 25 15:46:16 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/changelog: Tag for 1.10.16 release date(for real this time).

Sat Oct 25 15:45:48 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Change formatting of info.dir.

Sat Oct 25 15:04:41 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/mlib.c, include/dpkg.h.in, utils/md5sum.c: Change limit and the
    return value for buffer_copy to off_t, which fixes large file handling.

Sat Oct 25 15:02:27 CDT 2003 Adam Heath <doogie@debian.org>

  * almost all .c files: Almost *EVERY* damn file was including config.h in
    the wrong spot.  After making it the first include, then
    off_t/size_t/etc could actually be redefined to be 64-bit compatible.

Sat Oct 25 12:47:22 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.pl: Fix dpkg-checkbuilddeps calling of