@@ -14,6 +14,8 @@ dpkg (1.10.17) unstable; urgency=medium
     Don't assume /usr/info/dir exists if /usr/info does.  Closes: #165770.
   * Jordi Mallach <jordi@debian.org>:
     Update Catalan translation.
+  * Fix errors with dependency fields that reference ${dpkg:Version}.
+    Closes: #213108.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
