@@ -1,3 +1,8 @@
+Mon Oct 27 13:01:12 CST 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-gencontrol.pl: Fix errors with dependency fields that
+    reference ${dpkg:Version}.
+
 Mon Oct 27 18:45:19 CET 2003 Jordi Mallach <jordi@debian.org>
 
   * po/ca.po: Update Catalan translation and recode to UTF-8.
